fix z-index

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -31,6 +31,7 @@ html {
 
 body {
   max-width: 100%;
+  overflow: hidden auto;
   margin: 0;
   background: $blue-super-light;
 }
